change api from http to https to avoid 'Mixed Content' issue

--- a/weather-app/src/assets/scss/_icon.scss
+++ b/weather-app/src/assets/scss/_icon.scss
@@ -1,9 +1,9 @@
-@font-face {
-  font-family: 'Material Symbols Rounded';
-  font-style: normal;
-  font-weight: 400;
-  src: url(../font/material-symbol-rounded.woff2) format('woff2');
-}
+// @font-face {
+//   font-family: 'Material Symbols Rounded';
+//   font-style: normal;
+//   font-weight: 400;
+//   src: url(https://example.com/material-symbols.woff) format('woff');
+// }
 
 .m-icon {
   font-family: 'Material Symbols Rounded';
