--- a/weather-app/src/assets/scss/_animations.scss
+++ b/weather-app/src/assets/scss/_animations.scss
@@ -12,3 +12,8 @@
   0% { transform: translateY(-50%) rotate(0); }
   100% { transform: translateY(-50%) rotate(1turn); }
 }
+
+@keyframes loading-2 {
+  0% { transform:translateY(-40%); opacity:0; }
+  100% { transform: translateY(0); opacity:1; }
+}
